-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 25, 26, 27
-
Component/s: hotspot
-
master
-
riscv
-
linux
Currently, we only check UseRVV flag in SharedRuntime::is_wide_vector on RISC-V platforms. This is not optimal when no vector instructions is used by the nmethod. In this case, the the input size parameter is zero. We should consider this case so that we choose the right sub in SharedRuntime::get_poll_stub when handling safepoint.
- links to
-
Commit(master)
openjdk/jdk/ca3e6236
-
Review(master)
openjdk/jdk26u/20
-
Review(master)
openjdk/jdk/29307