8375657: RISC-V: Need to check size in SharedRuntime::is_wide_vector

Reviewed-by: fjiang, fyang